Closed
Bug 801601
Opened 13 years ago
Closed 13 years ago
remove code specific to OS X 10.5 in Cocoa widgets
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla19
People
(Reporter: jaas, Assigned: jaas)
Details
Attachments
(1 file, 1 obsolete file)
|
31.86 KB,
patch
|
smichaud
:
review+
|
Details | Diff | Splinter Review |
Pretty straightforward patch. This also removes some code in widget specific to Carbon NPAPI plugins.
Attachment #671399 -
Flags: review?(smichaud)
Update to current trunk.
Attachment #671399 -
Attachment is obsolete: true
Attachment #671399 -
Flags: review?(smichaud)
Attachment #676154 -
Flags: review?(smichaud)
Updated•13 years ago
|
Attachment #676154 -
Flags: review?(smichaud) → review+
pushed to mozilla-inbound
http://hg.mozilla.org/integration/mozilla-inbound/rev/eef85b630817
Comment 4•13 years ago
|
||
Comment on attachment 676154 [details] [diff] [review]
fix v1.1
Review of attachment 676154 [details] [diff] [review]:
-----------------------------------------------------------------
::: widget/cocoa/nsCocoaFeatures.mm
@@ +45,5 @@
> {
> // Disallow Core Animation on 10.5 because of crashes.
> // See Bug 711564.
> return (OSXVersion() >= MAC_OS_X_VERSION_10_6_HEX);
> }
It looks like nsCocoaFeatures::SupportCoreAnimationPlugins could also have been removed from here (and its callers simplified to just use 'true').
Comment 5•13 years ago
|
||
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in
before you can comment on or make changes to this bug.
Description
•