Bug 801601: Remove code specific to OS X 10.5 in Cocoa widgets. r=smichaud